<resources>
    <string-array name="languages">
        <item>Spanish</item>
        <item>English</item>
    </string-array>
    
    <string name="app_name">Bloom</string>
    <string name="action_bed_view">Bed view</string>
    <string name="action_node_view">Node vew</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="wrong_password">Incorrect username and/or password</string>
    <string name="net_error">Network error, check your internet connection</string>
    <string name="internal_error">Internal Server error, please contact Bloom Support</string>
    <string name="empty_fields">You must complete all the required fields</string>
    <string name="invalid_email">Invalid email</string>
    <string name="welcome">Welcome</string>
    <string name="have_an_account">¿Have an account?</string>
    <string name="log_in">Log in</string>
    <string name="want_to_subscribe">¿Want to subscribe?</string>
    <string name="buy_subscription">Buy a subscription</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="start">Start</string>
    <string name="forgot_pass">Forgot my password</string>
    <string name="greenhouse">Greenhouse</string>
    <string name="no_greenhouse">You don\'t have any greenhouse yet</string>
    <string name="sector">Sector</string>
    <string name="no_sector">You don\'t have any sector yet</string>
    <string name="node">Node</string>
</resources>
