<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_landing">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:padding="15dp"
        >

        <ImageView
            android:src="@drawable/ic_logo"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:paddingBottom="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/WhiteStyle"
            android:layout_marginTop="16dp"
            android:id="@+id/inputLayoutUser">

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="#FFFFFF"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:textSize="16sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:theme="@style/WhiteStyle"
            android:layout_marginTop="16dp"
            android:id="@+id/inputLayoutPass">

            <EditText
                android:id="@+id/loginPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="#FFFFFF"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textSize="16sp"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/forgot_password"
            android:text="@string/forgot_pass"
            android:layout_weight="5"
            android:textSize="14dp"
            android:textColor="#AAFFFFFF"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_weight="1"
            android:id="@+id/loginBtn"
            android:text="@string/start"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            android:enabled="false"
            android:textAllCaps="false"
            android:background="@drawable/btn_rounded_green_login"
            android:layout_width="100dp"
            android:layout_height="25dp" />

    </LinearLayout>



</LinearLayout>